test/conformance/kuttl/generate/policy/standard/data/nosync/pol-foreach-data-nosync/01-create.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - manifests.yaml
assert:
  - policy-ready.yaml
