test/conformance/kuttl/generate/policy/standard/data/nosync/pol-foreach-data-nosync/04-delete-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: kyverno.io/v2beta1
    kind: ClusterPolicy
    name: pol-foreach-data-nosync
    namespace: default
