test/conformance/kuttl/generate/policy/standard/data/nosync/pol-foreach-data-nosync/manifests.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: pol-foreach-data-nosync
  namespace: default
spec:
  rules:
    - name: pol-foreach-data-nosync-secret
      match:
        any:
          - resources:
              kinds:
                - Pod
      generate:
        foreach:
          - list: "request.object.spec.containers"
            generateResources:
              - kind: Secret
                apiVersion: v1
                name: "newsecret"
                namespace: "default"
                synchronize: false
                data:
                  foo: YmFy
