test/conformance/kuttl/generate/policy/standard/data/nosync/pol-foreach-data-nosync/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: pol-foreach-data-sync
  namespace: default
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
